hphp/test/slow/type_annotation/type_annotation_alias4.php.expectf
Fatal error: when resolving type alias MyAlias, class NonExistentClass not found in %s on line 11
